# components/backend/src/main/resources/restaurant-api-doc.yaml
@@ -31,10 +31,14 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/UserSession'
+              $ref: '#/components/schemas/UserLogin'
       responses:
         '200':
           description: User successfully logged in
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserSession'
         '401':
           description: Unauthorized
         '400':
@@ -57,10 +61,18 @@ paths:
         default:
           description: successful operation
   /password-reset:
+    parameters:
+      - name: userId
+        in: path
+        description: The ID of the user
+        required: true
+        schema:
+          type: string
+          example: "ObjectId('6544cd596955fe0a1c04fba9')"
     patch:
       tags: 
         - user
-      summary: User login
+      summary: Password reset
       operationId: passwordReset
       parameters:
         - name: oldPassword
@@ -73,7 +85,7 @@ paths:
           required: true
       responses:
         '200':
-          description: User successfully logged in
+          description: successfully updated
         '401':
           description: Unauthorized
         '400':
@@ -100,7 +112,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
         '404':
-          description: Employee not found
+          description: User not found
     put:
       tags:
         - user
@@ -122,19 +134,19 @@ paths:
         '400':
           description: Invalid ID supplied
         '404':
-          description: Employee not found
+          description: User not found
         '405':
           description: Validation exception
     delete:
       tags:
         - user
       summary: Delete user by ID
-      operationId: deleteEmployeeById
+      operationId: deleteUserById
       responses:
         '400':
           description: Invalid ID supplied
         '404':
-          description: Employee not found
+          description: User not found
 
 
 
